Fix side by side view column headers to use normal font
I messed up the CSS class priority at some point in my recent changes
and caused this to not pick up the norm-font like we wanted it to.

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -616,7 +616,7 @@
   background: white;
   border-bottom: 1px solid white;
 }
-.fileColumnHeader {
+.patchContentTable td.fileColumnHeader {
   background: trimColor;
   font-family: norm-font;
   font-weight: bold;
